<package>
  <name>sbgc_plot</name>
  <version>0.4.8</version>
  <description>RQT based plugin to visualize SBGC IMU</description>
  <maintainer email="bolat.ashim@gmail.com">Bolat Ashim</maintainer>

  
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python-matplotlib</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend version_gte="0.2.19">python_qt_binding</run_depend>
  <run_depend version_gte="0.2.25">qt_gui_py_common</run_depend>
  <run_depend>qwt_dependency</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_py_common</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
